app/assets/css/tiles/overrides.less
.tile--weather .skycon {
  max-width: 40px;
  padding-top: 5px;
}

.tile__body {
  .tile--small.tile--agenda &,
  .tile--wide.tile--agenda &,
  .tile--small.tile--calendar &,
  .tile--wide.tile--calendar &,
  .tile--account & {
    & ul {
      line-height: 0.8 !important;
      margin-bottom: 8px;
    }
    .wbs-message > a {
      line-height: 1.4; // so dotted bottom-border is visible, only affects some browsers
    }
    .text-right {
      margin-bottom: 3px;
    }
  }
  .fa {
    opacity: 0.5;
    margin-right: 4px;

  }
}

.tile--account {
  .flex-container {
    display: flex;
    flex-direction: row;
  }

  .flex-photo {
    flex-grow: 0;
    width: 60px;
    margin-right: 8px;

    img {
      width: 100%;
    }
  }

  .flex-content {
    flex-grow: 1;
    overflow: hidden;

    li {
      white-space: nowrap;
      text-overflow: ellipsis;
    }
  }
}

.tile--mail, .tile--agenda, .tile--calendar {
  .fa-info-circle {
    opacity: 1;
  }
}

.tile--eap {
  .feature {
    .date-and-name, .more-info, .feedback {
      display: inline-block;
      margin-right: 16px;
    }
    .more-info, .feedback {
      text-decoration: underline;
      i.fa {
        margin-right: 4px;
      }
    }
    .feedback {
      margin-right: 0;
    }
  }
}

